--- a/FlinkToKafka/pom.xml
+++ b/FlinkToKafka/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>flink-connector-kafka_${scala.binary.version}</artifactId>
             <version>${flink.version}</version>
         </dependency>
+
+       <!-- <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.12</artifactId>
+            <version>2.2.0</version>
+        </dependency>-->
     </dependencies>
 
     <build>
