--- a/FlinkExample/pom.xml
+++ b/FlinkExample/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>FlinkExample</artifactId>
+    <packaging>jar</packaging>
 
     <!-- 依赖jar -->
     <dependencies>
